<resources>
    <string name="app_name">Bla Bla Wild</string>
    <string name="action_settings">Settings</string>
    <string name="search_text">Rechercher</string>
    <string name="departure">Départ</string>
    <string name="destination">Destination</string>
    <string name="date">Date</string>
    <string name="price">Prix</string>
    <string name="publish">Publier</string>
    <string name="seekbutton">Rechercher</string>
    <string name="toast">Départ et/ou destination non renseignés</string>
    <string name="homepage">Rechercher un itinéraire</string>
    <string name="proposition">Proposer un voyage</string>
    <string name="message">nom</string>
    <string name="message1">prénom</string>
    <string name="search">search</string>
    <string name="datemissing">Vous n\'avez pas donné de date à votre voyage</string>
</resources>