<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_search_itinerary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fr.wcs.blablawild.SearchItineraryActivity">

    <TextView
        android:text="@string/departure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:id="@+id/textDeparture" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text=""
        android:ems="10"
        android:layout_below="@+id/textDeparture"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="11dp"
        android:id="@+id/textUserDeparture"
        android:layout_alignEnd="@+id/textUserDestination"
        android:layout_alignRight="@+id/textUserDestination"/>

    <TextView
        android:text="@string/destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textUserDeparture"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="19dp"
        android:id="@+id/textDestination" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text=""
        android:ems="10"
        android:layout_below="@+id/textDestination"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:id="@+id/textUserDestination" />

    <TextView
        android:text="@string/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textUserDestination"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="26dp"
        android:id="@+id/textDate" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:layout_below="@+id/textDate"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:id="@+id/textUserDate" />

    <Button
        android:text="@string/seekbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekButton"
        android:layout_below="@+id/textUserDate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp" />

</RelativeLayout>
